Details
-
Bug
-
Status: Closed
-
P4: Low
-
Resolution: Done
-
4.7.4
-
None
-
Win7, Ubuntu 11.04: gnome
-
6d370a19e367d0ccec59db5c34cbe2e3f7cfc586
Description
Qt Creator crashes when trying to set a value to singleStep property below 1 when the nothesVisible is checked on QDial Input Widget
Create a new Qt Gui Application.
Open mainwindow.ui and add a QDial Input Widget.
Go to the Qdial object properties window and tick notchesVisible.
Then go to singleStep property and change default value to something bellow 1. Lets say 0.
Qt creator crashes.