QDial: Fix crash when singleStep-property is 0.

Task-number: QTBUG-23072

Change-Id: I296b46af23420b24fa5460b9660e33bf203ea29f
Reviewed-by: Jarek Kobus <jaroslaw.kobus@nokia.com>
(cherry picked from commit 6d370a19e367d0ccec59db5c34cbe2e3f7cfc586)
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@nokia.com>

cregit: dfddabe1157bc6d826612b82d5bfb301205e7ad5 https://github.com/qt/qtbase/commit/dfddabe1157bc6d826612b82d5bfb301205e7ad5